--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,14 +60,14 @@ jobs:
       # 4️⃣ Terraform Init
       # =======================
       - name: Terraform Init
-        working-directory: ${{ env.TERRAFORM_DIR }}
+        working-directory: .
         run: |
           terraform init \
-            -backend-config="bucket=${{ secrets.TF_BACKEND_BUCKET }}" \
-            -backend-config="key=${{ github.ref_name }}/terraform.tfstate" \
-            -backend-config="region=${{ env.AWS_REGION }}" \
-            -backend-config="dynamodb_table=${{ secrets.TF_BACKEND_DYNAMODB }}" \
-            -reconfigure
+          -backend-config="bucket=${{ secrets.TF_BACKEND_BUCKET }}" \
+          -backend-config="key=${{ github.ref_name }}/terraform.tfstate" \
+          -backend-config="region=${{ env.AWS_REGION }}" \
+          -backend-config="dynamodb_table=${{ secrets.TF_BACKEND_DYNAMODB }}" \
+          -reconfigure
 
       # =======================
       # 5️⃣ Terraform Validate
@@ -141,4 +141,5 @@ jobs:
             --service ${{ secrets.ECS_SERVICE_NAME }} \
             --force-new-deployment \
             --region ${{ env.AWS_REGION }}
+
 
