--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ on:
 env:
   AWS_REGION: ap-south-1
   TF_VERSION: 1.9.7
-  TERRAFORM_DIR: ./terraform
+  TERRAFORM_DIR: .
   APP_NAME: ecs-app
   IMAGE_TAG: latest
 
@@ -22,7 +22,7 @@ permissions:
   contents: read
   id-token: write
 
-# ✅ Prevent multiple parallel runs → fixes DynamoDB lock forever
+# ✅ Prevent 2 pipelines from running at same time (avoid DynamoDB lock failures)
 concurrency:
   group: terraform-${{ github.ref_name }}
   cancel-in-progress: true
@@ -36,47 +36,64 @@ jobs:
       name: ${{ github.ref_name }}
 
     steps:
+      # =======================
+      # 1️⃣ Checkout Repository
+      # =======================
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # =======================
+      # 2️⃣ Setup Terraform
+      # =======================
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
-      # ✅ Correct AWS OIDC
+      # =======================
+      # 3️⃣ Configure AWS Credentials
+      # =======================
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION || env.AWS_REGION }}
           role-session-name: github-oidc-session
 
-      # ✅ FIXED: Correct working directory
+      # =======================
+      # 4️⃣ Terraform Init
+      # =======================
       - name: Terraform Init
-        working-directory: .
+        working-directory: ${{ env.TERRAFORM_DIR }}
         run: |
           terraform init \
-          -backend-config="bucket=${{ secrets.TF_BACKEND_BUCKET }}" \
-          -backend-config="key=${{ github.ref_name }}/terraform.tfstate" \
-          -backend-config="region=${{ env.AWS_REGION }}" \
-          -backend-config="dynamodb_table=${{ secrets.TF_BACKEND_DYNAMODB }}" \
-          -reconfigure 
+            -backend-config="bucket=${{ secrets.TF_BACKEND_BUCKET }}" \
+            -backend-config="key=${{ github.ref_name }}/terraform.tfstate" \
+            -backend-config="region=${{ secrets.AWS_REGION || env.AWS_REGION }}" \
+            -backend-config="dynamodb_table=${{ secrets.TF_BACKEND_DYNAMODB }}" \
+            -reconfigure
 
+      # =======================
+      # 5️⃣ Terraform Validate
+      # =======================
       - name: Terraform Validate
-        working-directory: .
+        working-directory: ${{ env.TERRAFORM_DIR }}
         run: terraform validate
-        
-      - name: Terraform Plan
-        working-directory: .
-        run: terraform plan -var-file="terraform.tfvars" -input=false
-        continue-on-error: true
 
-      - name: Terraform Apply
+      # =======================
+      # 6️⃣ Terraform Plan
+      # =======================
+      - name: Terraform Plan
+        working-directory: ${{ env.TERRAFORM_DIR }}
+        run: terraform plan -var-file="terraform.tfvars" -input=false -lock-timeout=60s
+
+      # =======================
+      # 7️⃣ Terraform Apply — Only Main
+      # =======================
+      - name: Terraform Apply (Main Only)
         if: github.ref == 'refs/heads/main'
-        working-directory: .
-        run: terraform apply -auto-approve -var-file="terraform.tfvars"
- 
+        working-directory: ${{ env.TERRAFORM_DIR }}
+        run: terraform apply -auto-approve -var-file="terraform.tfvars" -lock-timeout=120s
 
   docker-deploy:
     name: Build & Push Docker to ECR
@@ -86,25 +103,57 @@ jobs:
       name: ${{ github.ref_name }}
 
     steps:
+      # =======================
+      # 1️⃣ Checkout Code
+      # =======================
       - name: Checkout
         uses: actions/checkout@v4
 
+      # =======================
+      # 2️⃣ Configure AWS for ECR
+      # =======================
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ECR_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
+      # =======================
+      # 3️⃣ Login to Amazon ECR
+      # =======================
       - name: Login to Amazon ECR
         id: ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      # =======================
+      # 4️⃣ Setup Docker Buildx + Cache
+      # =======================
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: buildx-${{ github.ref }}-${{ github.sha }}
+          restore-keys: |
+            buildx-${{ github.ref }}-
+
+      # =======================
+      # 5️⃣ Build & Push Image
+      # =======================
       - name: Build, Tag, and Push Docker Image
         run: |
-          docker build -t ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} .
-          docker tag ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} ${{ steps.ecr.outputs.registry }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}
-          docker push ${{ steps.ecr.outputs.registry }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}
+          IMAGE=${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}
+          FULL_IMAGE=${{ steps.ecr.outputs.registry }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}
 
+          docker build -t $IMAGE .
+          docker tag $IMAGE $FULL_IMAGE
+          docker push $FULL_IMAGE
+
+      # =======================
+      # 6️⃣ Update ECS Service
+      # =======================
       - name: Update ECS Service
         run: |
           aws ecs update-service \
@@ -113,4 +162,12 @@ jobs:
             --force-new-deployment \
             --region ${{ env.AWS_REGION }}
 
-
+      # =======================
+      # ✅ 7️⃣ Wait for ECS Deployment to Stabilize
+      # =======================
+      - name: Wait for ECS Service Stability
+        run: |
+          aws ecs wait services-stable \
+            --cluster ${{ secrets.ECS_CLUSTER_NAME }} \
+            --services ${{ secrets.ECS_SERVICE_NAME }} \
+            --region ${{ env.AWS_REGION }}
